# speclib

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/speclib/: index.rst
licenses/: LICENSE.rst
speclib/: __init__.py  example_mod.py  main.py  photometry.py  utils.py
speclib/data/filters/: filters.ecsv
speclib/example_subpkg/: setup_package.py
speclib/tests/: test_example.py
src/speclib/: __init__.py  core.py  photometry.py  utils.py
src/speclib/data/filters/: filters.ecsv
tests/: conftest.py  test_core.py  test_interpolation_toggle.py  test_newera_v34.py  test_photometry.py  test_sed.py  test_spectral_grid_bounds.py  test_utils.py  test_version.py
tests/data/sphinx/: Teff_3000.0_logg_4.00_logZ_+0.00_CtoO_0.5_spectra.txt  Teff_3000.0_logg_4.50_logZ_+0.00_CtoO_0.5_spectra.txt
